# Haply-API-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: Doxyfile.in
example/: main.cpp
src/Haply/: Actuator.cpp  Actuator.h  Board.cpp  Board.h  Device.cpp  Device.h  DeviceType.h  DeviceType.h.orig  HaplyFourDoFMech.cpp  HaplyFourDoFMech.h  HaplyOneDoFMech.cpp  HaplyOneDoFMech.h  HaplyThreeDoFMech.cpp  HaplyThreeDoFMech.h  HaplyTwoDoFMech.cpp  HaplyTwoDoFMech.h  HapticPaddleMech.cpp  HapticPaddleMech.h  Mechanisms.h  Pantograph.cpp  Pantograph.h  Pwm.cpp  Pwm.h  Sensor.cpp  Sensor.h  Serial.h  SimpleActuatorMech.cpp  SimpleActuatorMech.h  Types.h
src/Wjwwood/: WjwwoodSerial.cpp  WjwwoodSerial.h
